[gd_scene load_steps=2 format=3 uid="uid://6ph2v1fiefvh"]

[ext_resource type="Script" path="res://Scripts/game_over_screen.gd" id="1_ohpm8"]

[node name="GameOverScreen" type="CanvasLayer"]
script = ExtResource("1_ohpm8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_index = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.0
offset_top = -46.5
offset_right = 76.0
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2

[node name="MenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Abrir o menu"

[node name="RetryButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Tentar novamente"

[node name="GameOverLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Game Over"
horizontal_alignment = 1
